// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment Component renders comment with creator and comment text 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li>
        <div
          class="a4-comments__comment"
        >
          <a
            class="a4-comments__anchor"
            href="./?comment=1"
            id="comment_1"
          >
            Comment 1
          </a>
          <div
            class="a4-comments__box"
          >
            <div
              class="row"
            >
              <div
                class="col-2 col-lg-1 a4-comments__user-img"
              />
              <div
                class="col-7 col-md-8 a4-comments__author-container"
              >
                <div
                  class="a4-comments__author"
                >
                  <a>
                    Participant 1
                  </a>
                </div>
                <time
                  class="a4-comments__submission-date"
                >
                  May 21, 2024, 11:44 a.m.
                </time>
              </div>
              <div
                class="col-1 ms-auto a4-comments__dropdown-container"
              />
              <div
                class="col-12"
              >
                <div
                  class="a4-comments__text"
                >
                  <p>
                    This is a test comment.
                  </p>
                </div>
              </div>
              <div
                class="col-6 a4-comments__read-btn-container"
              />
            </div>
          </div>
          <div
            class="a4-comments__action"
          >
            <div
              class="row"
            >
              <div
                class="col-12 a4-comments__action-bar-container"
              >
                <div
                  class="rating"
                  data-testid="rating-box"
                >
                  <button
                    aria-pressed="false"
                    class="rating-button rating-up"
                    disabled=""
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="fa fa-thumbs-up"
                    />
                     
                    10
                     
                    <span
                      class="rating__label"
                    >
                      Likes
                    </span>
                    <span
                      class="a4-sr-only"
                    >
                      Click to like
                    </span>
                  </button>
                  <button
                    aria-pressed="false"
                    class="rating-button rating-down"
                    disabled=""
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="fa fa-thumbs-down"
                    />
                     
                    2
                     
                    <span
                      class="rating__label"
                    >
                      Dislikes
                    </span>
                    <span
                      class="a4-sr-only"
                    >
                      Click to dislike
                    </span>
                  </button>
                </div>
                <div
                  class="a4-comments__action-bar"
                >
                  <button
                    class="btn btn--no-border a4-comments__action-bar__btn"
                    type="button"
                  >
                    <a
                      href="#child-comment-form"
                    >
                      <i
                        aria-hidden="true"
                        class="far fa-comment"
                      />
                       
                      Reply
                    </a>
                  </button>
                  <button
                    class="a4-modal__toggle btn-link link"
                  >
                    <i
                      aria-hidden="true"
                      class="fas fa-share"
                    />
                     
                    Share
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
    <dialog
      class="a4-modal"
      id=":r0:"
    >
      <div
        class="a4-modal__content"
      >
        <header
          class="a4-modal__header"
        >
          <h2
            class="a4-modal__title"
          >
            Share link
          </h2>
          <button
            aria-label="Close"
            class="a4-modal__close"
            type="button"
          >
            <i
              aria-hidden="true"
              class="fa fa-times"
            />
          </button>
        </header>
        <div
          class="a4-modal__body "
        >
          <div
            class="input-group a4-url-modal__body"
          >
            <input
              class="form-control"
              id="share-url-undefined"
              readonly=""
              type="text"
              value="http://localhost/?comment=1"
            />
            <button
              aria-pressed="false"
              autocomplete="off"
              class="a4-url-modal__button"
            >
              Copy
            </button>
          </div>
        </div>
      </div>
    </dialog>
  </body>,
  "container": <div>
    <li>
      <div
        class="a4-comments__comment"
      >
        <a
          class="a4-comments__anchor"
          href="./?comment=1"
          id="comment_1"
        >
          Comment 1
        </a>
        <div
          class="a4-comments__box"
        >
          <div
            class="row"
          >
            <div
              class="col-2 col-lg-1 a4-comments__user-img"
            />
            <div
              class="col-7 col-md-8 a4-comments__author-container"
            >
              <div
                class="a4-comments__author"
              >
                <a>
                  Participant 1
                </a>
              </div>
              <time
                class="a4-comments__submission-date"
              >
                May 21, 2024, 11:44 a.m.
              </time>
            </div>
            <div
              class="col-1 ms-auto a4-comments__dropdown-container"
            />
            <div
              class="col-12"
            >
              <div
                class="a4-comments__text"
              >
                <p>
                  This is a test comment.
                </p>
              </div>
            </div>
            <div
              class="col-6 a4-comments__read-btn-container"
            />
          </div>
        </div>
        <div
          class="a4-comments__action"
        >
          <div
            class="row"
          >
            <div
              class="col-12 a4-comments__action-bar-container"
            >
              <div
                class="rating"
                data-testid="rating-box"
              >
                <button
                  aria-pressed="false"
                  class="rating-button rating-up"
                  disabled=""
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa fa-thumbs-up"
                  />
                   
                  10
                   
                  <span
                    class="rating__label"
                  >
                    Likes
                  </span>
                  <span
                    class="a4-sr-only"
                  >
                    Click to like
                  </span>
                </button>
                <button
                  aria-pressed="false"
                  class="rating-button rating-down"
                  disabled=""
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa fa-thumbs-down"
                  />
                   
                  2
                   
                  <span
                    class="rating__label"
                  >
                    Dislikes
                  </span>
                  <span
                    class="a4-sr-only"
                  >
                    Click to dislike
                  </span>
                </button>
              </div>
              <div
                class="a4-comments__action-bar"
              >
                <button
                  class="btn btn--no-border a4-comments__action-bar__btn"
                  type="button"
                >
                  <a
                    href="#child-comment-form"
                  >
                    <i
                      aria-hidden="true"
                      class="far fa-comment"
                    />
                     
                    Reply
                  </a>
                </button>
                <button
                  class="a4-modal__toggle btn-link link"
                >
                  <i
                    aria-hidden="true"
                    class="fas fa-share"
                  />
                   
                  Share
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Comment Component renders comment with moderator badge 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li>
        <div
          class="a4-comments__comment"
        >
          <a
            class="a4-comments__anchor"
            href="./?comment=1"
            id="comment_1"
          >
            Comment 1
          </a>
          <div
            class="a4-comments__box"
          >
            <div
              class="row"
            >
              <div
                class="col-2 col-lg-1 a4-comments__user-img"
              />
              <div
                class="col-7 col-md-8 a4-comments__author-container"
              >
                <div
                  class="a4-comments__author"
                >
                  <a>
                    Participant 1
                  </a>
                </div>
                <span
                  class="a4-comments__moderator"
                >
                  Moderator
                </span>
                <time
                  class="a4-comments__submission-date"
                >
                  May 21, 2024, 11:44 a.m.
                </time>
              </div>
              <div
                class="col-1 ms-auto a4-comments__dropdown-container"
              />
              <div
                class="col-12"
              >
                <div
                  class="a4-comments__text"
                >
                  <p>
                    This is a test comment.
                  </p>
                </div>
              </div>
              <div
                class="col-6 a4-comments__read-btn-container"
              />
            </div>
          </div>
          <div
            class="a4-comments__action"
          >
            <div
              class="row"
            >
              <div
                class="col-12 a4-comments__action-bar-container"
              >
                <div
                  class="rating"
                  data-testid="rating-box"
                >
                  <button
                    aria-pressed="false"
                    class="rating-button rating-up"
                    disabled=""
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="fa fa-thumbs-up"
                    />
                     
                    10
                     
                    <span
                      class="rating__label"
                    >
                      Likes
                    </span>
                    <span
                      class="a4-sr-only"
                    >
                      Click to like
                    </span>
                  </button>
                  <button
                    aria-pressed="false"
                    class="rating-button rating-down"
                    disabled=""
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="fa fa-thumbs-down"
                    />
                     
                    2
                     
                    <span
                      class="rating__label"
                    >
                      Dislikes
                    </span>
                    <span
                      class="a4-sr-only"
                    >
                      Click to dislike
                    </span>
                  </button>
                </div>
                <div
                  class="a4-comments__action-bar"
                >
                  <button
                    class="btn btn--no-border a4-comments__action-bar__btn"
                    type="button"
                  >
                    <a
                      href="#child-comment-form"
                    >
                      <i
                        aria-hidden="true"
                        class="far fa-comment"
                      />
                       
                      Reply
                    </a>
                  </button>
                  <button
                    class="a4-modal__toggle btn-link link"
                  >
                    <i
                      aria-hidden="true"
                      class="fas fa-share"
                    />
                     
                    Share
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
    <dialog
      class="a4-modal"
      id=":r4:"
    >
      <div
        class="a4-modal__content"
      >
        <header
          class="a4-modal__header"
        >
          <h2
            class="a4-modal__title"
          >
            Share link
          </h2>
          <button
            aria-label="Close"
            class="a4-modal__close"
            type="button"
          >
            <i
              aria-hidden="true"
              class="fa fa-times"
            />
          </button>
        </header>
        <div
          class="a4-modal__body "
        >
          <div
            class="input-group a4-url-modal__body"
          >
            <input
              class="form-control"
              id="share-url-undefined"
              readonly=""
              type="text"
              value="http://localhost/?comment=1"
            />
            <button
              aria-pressed="false"
              autocomplete="off"
              class="a4-url-modal__button"
            >
              Copy
            </button>
          </div>
        </div>
      </div>
    </dialog>
  </body>,
  "container": <div>
    <li>
      <div
        class="a4-comments__comment"
      >
        <a
          class="a4-comments__anchor"
          href="./?comment=1"
          id="comment_1"
        >
          Comment 1
        </a>
        <div
          class="a4-comments__box"
        >
          <div
            class="row"
          >
            <div
              class="col-2 col-lg-1 a4-comments__user-img"
            />
            <div
              class="col-7 col-md-8 a4-comments__author-container"
            >
              <div
                class="a4-comments__author"
              >
                <a>
                  Participant 1
                </a>
              </div>
              <span
                class="a4-comments__moderator"
              >
                Moderator
              </span>
              <time
                class="a4-comments__submission-date"
              >
                May 21, 2024, 11:44 a.m.
              </time>
            </div>
            <div
              class="col-1 ms-auto a4-comments__dropdown-container"
            />
            <div
              class="col-12"
            >
              <div
                class="a4-comments__text"
              >
                <p>
                  This is a test comment.
                </p>
              </div>
            </div>
            <div
              class="col-6 a4-comments__read-btn-container"
            />
          </div>
        </div>
        <div
          class="a4-comments__action"
        >
          <div
            class="row"
          >
            <div
              class="col-12 a4-comments__action-bar-container"
            >
              <div
                class="rating"
                data-testid="rating-box"
              >
                <button
                  aria-pressed="false"
                  class="rating-button rating-up"
                  disabled=""
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa fa-thumbs-up"
                  />
                   
                  10
                   
                  <span
                    class="rating__label"
                  >
                    Likes
                  </span>
                  <span
                    class="a4-sr-only"
                  >
                    Click to like
                  </span>
                </button>
                <button
                  aria-pressed="false"
                  class="rating-button rating-down"
                  disabled=""
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="fa fa-thumbs-down"
                  />
                   
                  2
                   
                  <span
                    class="rating__label"
                  >
                    Dislikes
                  </span>
                  <span
                    class="a4-sr-only"
                  >
                    Click to dislike
                  </span>
                </button>
              </div>
              <div
                class="a4-comments__action-bar"
              >
                <button
                  class="btn btn--no-border a4-comments__action-bar__btn"
                  type="button"
                >
                  <a
                    href="#child-comment-form"
                  >
                    <i
                      aria-hidden="true"
                      class="far fa-comment"
                    />
                     
                    Reply
                  </a>
                </button>
                <button
                  class="a4-modal__toggle btn-link link"
                >
                  <i
                    aria-hidden="true"
                    class="fas fa-share"
                  />
                   
                  Share
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
